[package]
name = "async_runtime"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "1.3.1"
crossbeam = "0.8.1"
pin-utils = "0.1.0"
once_cell = "1.8.0"
futures = "0.3.17"
num_cpus = "1.13.0"

[dev-dependencies]
